--- a/config/config.json
+++ b/config/config.json
@@ -6,6 +6,7 @@
 "HDFS_PORT" : "9870",
 "HDFS_USER" : "hadoop",
 "RECENT_ARTICLE_COUNT" : "100", 
+"MAX_TRY" : "3",
 "STANDARD_DATETIME_FORMAT" : "%Y-%m-%dT%H:%M:%S.%fZ",
 "STANDARD_DATE_FORMAT" :"%Y-%m-%d",
 "STANDARD_LOG_FORMAT" : "[%(levelname)s][%(asctime)s]: %(message)s",
